Fix youtube background video on mobile device

--- a/src/components/videos/sass/_video-background.scss
+++ b/src/components/videos/sass/_video-background.scss
@@ -67,13 +67,13 @@ section.hero-banner {
         height: 0;
         padding-bottom: 56.25%;
         /* 16:9 */
-        pointer-events: none;
-        @include mobile{
-             pointer-events:auto;
-        }
-        @include tablet{
-            pointer-events:auto;
-        }
+        //pointer-events: none;
+        // @include mobile{
+        //      pointer-events:auto;
+        // }
+        // @include tablet{
+        //     pointer-events:auto;
+        // }
         &:after{
             background: $black;
             content: " ";
